--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,9 @@ img {
   margin-top: 20px;
   background: rgb(211, 153, 32);
 }
+
+#guessed-letters {
+  font-family:'Dead Kansas';
+  font-size: 50px;
+  color: #D39920;
+}
